add http port for topics
